fix cron, added CRUD for categories
