# exptr_api/internal/models/categories.go
@@ -1,6 +1,9 @@
 package models
 
-import "time"
+import (
+	"alex_gorbunov_exptr_api/internal/lib/api/response"
+	"time"
+)
 
 type Category struct {
 	ID        string    `json:"id"`
@@ -9,4 +12,21 @@ type Category struct {
 	Type      string    `json:"type"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type CategoryRequest struct {
+	UserID    string    `json:"user_id"`
+	Name      string    `json:"name"`
+	Type      string    `json:"type"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type CategoryResponse struct {
+	response.Response
+}
+
+type GetCategoriesResponse struct {
+	response.Response
+	Categories []Category `json:"categories"`
 }
